--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,20 @@
 </ion-header>
 
 <ion-content padding>
+<ion-grid>
+  <ion-row>
+    <ion-col>
+      <ion-item>
+        <strong> App Name : </strong> ionic Weather
+      </ion-item>
+      <ion-item>
+          <strong> Version : </strong> 0.1
+        </ion-item>
+        <ion-item>
+            <strong> Description : </strong> Weather App templete using Ionic 3.
+          </ion-item>
+    </ion-col>    
+  </ion-row>
+</ion-grid>
 
 </ion-content>
