--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,11 +5,35 @@
 </ion-header>
 
 <ion-content padding class="home">
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    Hello Arinjay..
-  </p>
-  <p>
-    YOU SUCK.
-  </p>
+
+  <ion-grid *ngIf="weather">
+    <ion-row>
+    <ion-col width-50 offset-25>
+      <h2 lcass="location"> {{weather.display_location.full}}</h2>
+      <div class="icon"> <img src="{{weather.icon_url}}" alt=""> </div>
+      <h3 class="desc">{{weather.weather}}</h3>
+      <h1 class="temp">{{weather.temp_c}}&deg;</h1>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col width-100>
+      <ion-list>
+          <ion-item>
+              <strong>Feels Like:</strong> {{weather.feelslike_c}}&deg;
+            </ion-item>
+        <ion-item>
+          <strong>Actual Temp:</strong> {{weather.temperature_string}}
+        </ion-item>
+        <ion-item>
+            <strong>Relative Humidity:</strong> {{weather.relative_humidity}}
+          </ion-item>
+          <ion-item>
+              <strong>Dewpoint:</strong> {{weather.dewpoint_string}}
+            </ion-item>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+
+  </ion-grid>
 </ion-content>
