--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>ionic Weather</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -9,7 +9,7 @@
   <ion-grid *ngIf="weather">
     <ion-row>
     <ion-col width-50 offset-25>
-      <h2 lcass="location"> {{weather.display_location.full}}</h2>
+      <h2 cass="location"> {{weather.display_location.full}}</h2>
       <div class="icon"> <img src="{{weather.icon_url}}" alt=""> </div>
       <h3 class="desc">{{weather.weather}}</h3>
       <h1 class="temp">{{weather.temp_c}}&deg;</h1>
@@ -29,7 +29,7 @@
             <strong>Relative Humidity:</strong> {{weather.relative_humidity}}
           </ion-item>
           <ion-item>
-              <strong>Dewpoint:</strong> {{weather.dewpoint_string}}
+              <strong>Visibility:</strong> {{weather.visibility_mi}} mi
             </ion-item>
       </ion-list>
     </ion-col>
